--- a/package.json
+++ b/package.json
@@ -11,5 +11,12 @@
     "url": "jamppa"
   },
   "author": "vitumake",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "discord.js": "^14.7.1",
+    "dotenv": "^16.0.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.35.0"
+  }
 }
