--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jamppa",
-  "version": "0.0.1",
+  "version": "0.1.2",
   "description": "Improved janibot",
   "main": "jani.js",
   "scripts": {
@@ -13,8 +13,12 @@
   "author": "vitumake",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.16.0",
     "discord.js": "^14.7.1",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "libsodium-wrappers": "^0.7.11",
+    "play-dl": "^1.9.6"
   },
   "devDependencies": {
     "eslint": "^8.35.0"
